--- a/styles/_font.scss
+++ b/styles/_font.scss
@@ -1,7 +1,7 @@
 
 
 .fonts{
-    font-family: "Source Code Pro", monospace;
+    font-family: "Poppins", sans-serif;
     font-style: normal;
     &_alt{
         font-family: "Poppins", sans-serif;
