menu with dropdown

--- a/styles/_flex.scss
+++ b/styles/_flex.scss
@@ -12,6 +12,9 @@
     &_Ai_SB{
         align-items: space-between;
     }
+    &_Ai_SA{
+        align-items: space-around;
+    }
     &_j_SB{
         justify-content: space-between;
     }
