--- a/styles/_nav.scss
+++ b/styles/_nav.scss
@@ -8,3 +8,13 @@
     max-width: 500px;
     margin-right: 50px;
 }
+.nav-drop{
+    min-height: 50px;
+    max-width: 100vw;
+    background-color: rgb(133, 222, 225);
+    border-radius: 10px;
+    padding-left: 25px;
+}
+.nav-drop:hover{
+    background-color: rgb(199, 253, 255);
+}
